complete 404, usluga, uslugi

--- a/src/uslugi.html
+++ b/src/uslugi.html
@@ -44,13 +44,13 @@
                                     <li>
                                         <div>Создание сайта</div>
                                         <ul>
-                                            <li><a href="#">индивидуальный проект</a></li>
-                                            <li><a href="#">сайт-визитка</a></li>
-                                            <li><a href="#">сайт-каталог</a></li>
-                                            <li><a href="#">интернет-магазин</a></li>
-                                            <li><a href="#">корпоративный сайт</a></li>
-                                            <li><a href="#">редизайн сайта</a></li>
-                                            <li><a href="#">ip</a></li>
+                                            <li><a href="/usluga.html">индивидуальный проект</a></li>
+                                            <li><a href="/usluga.html">сайт-визитка</a></li>
+                                            <li><a href="/usluga.html">сайт-каталог</a></li>
+                                            <li><a href="/usluga.html">интернет-магазин</a></li>
+                                            <li><a href="/usluga.html">корпоративный сайт</a></li>
+                                            <li><a href="/usluga.html">редизайн сайта</a></li>
+                                            <li><a href="/usluga.html">ip</a></li>
                                         </ul>
                                     </li>
                                     <li>
@@ -126,7 +126,10 @@
                 <div class="col-10">
                     <h1>Этапы разработки сайта</h1>
 
-                    <div class="list__items">
+                    <p>Под понятием SEO-аудит сайта подразумевается поэтапная проверка интернет-сайта на отсутствие различных отклонений (технических) и соответствие требованиям ПС (поисковым систем). К сожалению, большинство владельцев интернет-магазинов, блогов, лэндингов не знают, что такое аудит сайта, в результате чего их продукт всячески страдает от различных недочетов и ошибок в архитектуре, дизайне, неудобности.</p>
+                    <p>Следует понимать, что на первом этапе работы с интернет-продуктом следует всегда проводить аудит веб-сайта, так как это поможет понять его фактическое положение в ПС, дабы в дальнейшем подготовить соответствующую стратегию развития и расширения целевой аудитории. Такой анализ сайта рекомендуется производить периодически, так как на ресурсе может произойти смена структуры или появиться технические ошибки, а также не стоит забывать и о смене алгоритмов поисковых систем, которым обязательно нужно соответствовать, чтобы находится на первой странице выдачи.</p>
+
+                    <div class="list__items develop__steps">
                         <div class="list__items-item">
                             <div class="title">Звоните или пишите нам</div>
                             <div class="text">
@@ -136,7 +139,7 @@
                                 <div class="decor__number"><span>1</span></div>
                                 <div class="decor__line"></div>
                                 <div class="decor__icon">
-                                    <svg class="inline-svg-icon de-01">
+                                    <svg class="icon de-01">
                                         <use xlink:href="./img/symbols.svg#de-01"></use>
                                     </svg>
                                 </div>
@@ -151,7 +154,7 @@
                                 <div class="decor__number"><span>2</span></div>
                                 <div class="decor__line"></div>
                                 <div class="decor__icon">
-                                    <svg class="inline-svg-icon de-02">
+                                    <svg class="icon de-02">
                                         <use xlink:href="./img/symbols.svg#de-02"></use>
                                     </svg>
                                 </div>
@@ -166,7 +169,7 @@
                                 <div class="decor__number"><span>3</span></div>
                                 <div class="decor__line"></div>
                                 <div class="decor__icon">
-                                    <svg class="inline-svg-icon de-03">
+                                    <svg class="icon de-03">
                                         <use xlink:href="./img/symbols.svg#de-03"></use>
                                     </svg>
                                 </div>
@@ -181,7 +184,7 @@
                                 <div class="decor__number"><span>4</span></div>
                                 <div class="decor__line"></div>
                                 <div class="decor__icon">
-                                    <svg class="inline-svg-icon de-04">
+                                    <svg class="icon de-04">
                                         <use xlink:href="./img/symbols.svg#de-04"></use>
                                     </svg>
                                 </div>
@@ -196,7 +199,7 @@
                                 <div class="decor__number"><span>5</span></div>
                                 <div class="decor__line"></div>
                                 <div class="decor__icon">
-                                    <svg class="inline-svg-icon de-05">
+                                    <svg class="icon de-05">
                                         <use xlink:href="./img/symbols.svg#de-05"></use>
                                     </svg>
                                 </div>
@@ -211,8 +214,53 @@
                                 <div class="decor__number"><span>6</span></div>
                                 <div class="decor__line"></div>
                                 <div class="decor__icon">
-                                    <svg class="inline-svg-icon de-06">
+                                    <svg class="icon de-06">
                                         <use xlink:href="./img/symbols.svg#de-06"></use>
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="list__items-item">
+                            <div class="title">Тестирование</div>
+                            <div class="text">
+                                <p>Сайт - визитная карточка Вашего бизнеса на просторах интернета.  Сайт - визитная карточка Вашего бизнеса на просторах интернета.</p>
+                            </div>
+                            <div class="decor">
+                                <div class="decor__number"><span>7</span></div>
+                                <div class="decor__line"></div>
+                                <div class="decor__icon">
+                                    <svg class="icon de-07">
+                                        <use xlink:href="./img/symbols.svg#de-07"></use>
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="list__items-item">
+                            <div class="title">Сдача проекта и обучение</div>
+                            <div class="text">
+                                <p>Сайт - визитная карточка Вашего бизнеса на просторах интернета.  Сайт - визитная карточка Вашего бизнеса на просторах интернета.</p>
+                            </div>
+                            <div class="decor">
+                                <div class="decor__number"><span>8</span></div>
+                                <div class="decor__line"></div>
+                                <div class="decor__icon">
+                                    <svg class="icon de-08">
+                                        <use xlink:href="./img/symbols.svg#de-08"></use>
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="list__items-item">
+                            <div class="title">Сопровождение</div>
+                            <div class="text">
+                                <p>Сайт - визитная карточка Вашего бизнеса на просторах интернета.  Сайт - визитная карточка Вашего бизнеса на просторах интернета.</p>
+                            </div>
+                            <div class="decor">
+                                <div class="decor__number"><span>9</span></div>
+                                <div class="decor__line"></div>
+                                <div class="decor__icon">
+                                    <svg class="icon de-09">
+                                        <use xlink:href="./img/symbols.svg#de-09"></use>
                                     </svg>
                                 </div>
                             </div>
@@ -222,6 +270,188 @@
             </div>
         </div>
     </main>
+
+    <section class="sites__types">
+        <div class="bg__box"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-10">
+                    <div class="as__h1">Типы сайтов</div>
+
+                    <div class="list__items">
+                        <div class="list__items-item2">
+                            <div class="row">
+                                <div class="col-4">
+                                    <div class="image">
+                                        <img src="./img/site_type-01.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="col-8">
+                                    <div class="body">
+                                        <a class="title">Сайт-визитка</a>
+                                        <p>Сайт - визитная карточка Вашего бизнеса на просторах интернета.  Сайт - визитная карточка Вашего бизнеса на просторах интернета.</p>
+                                        <div class="price">от 5000 р.</div>
+                                        <a href="#" class="btn green">ПОДРОБНЕЕ</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="list__items-item2">
+                            <div class="row">
+                                <div class="col-4">
+                                    <div class="image">
+                                        <img src="./img/site_type-02.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="col-8">
+                                    <div class="body">
+                                        <a class="title">Сайт-каталог</a>
+                                        <p>Сайт - визитная карточка Вашего бизнеса на просторах интернета.  Сайт - визитная карточка Вашего бизнеса на просторах интернета.</p>
+                                        <div class="price">от 15 000 р.</div>
+                                        <a href="#" class="btn green">ПОДРОБНЕЕ</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="list__items-item2">
+                            <div class="row">
+                                <div class="col-4">
+                                    <div class="image">
+                                        <img src="./img/site_type-03.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="col-8">
+                                    <div class="body">
+                                        <a class="title">Интернет-магазин</a>
+                                        <p>Сайт - визитная карточка Вашего бизнеса на просторах интернета.  Сайт - визитная карточка Вашего бизнеса на просторах интернета.</p>
+                                        <div class="price">от 25 000 р.</div>
+                                        <a href="#" class="btn green">ПОДРОБНЕЕ</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="list__items-item2">
+                            <div class="row">
+                                <div class="col-4">
+                                    <div class="image">
+                                        <img src="./img/site_type-04.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="col-8">
+                                    <div class="body">
+                                        <a class="title">Корпоративный сайт</a>
+                                        <p>Сайт - визитная карточка Вашего бизнеса на просторах интернета.  Сайт - визитная карточка Вашего бизнеса на просторах интернета.</p>
+                                        <div class="price">от 18 000 р.</div>
+                                        <a href="#" class="btn green">ПОДРОБНЕЕ</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-10">
+                    <div class="order__service-form">
+                        <div class="wrap">
+                            <div class="desc">
+                                <div class="as__h1">Заказать услугу</div>
+                                <p>Вы можете бесплатно  получить аудит вашего сайта. Вас это не к чему не обязывает.</p>
+                            </div>
+                            <div class="form__box">
+                                <form action="#" class="order__service" method="post">
+                                    <div class="services__list-block single__block">
+                                        <select name="service" id="service__field">
+                                            <option selected disabled>Не выбрано</option>
+                                            <optgroup label="Создание сайта">
+                                                <option>Индивидуальный проект</option>
+                                                <option>Сайт-визитка</option>
+                                                <option>Сайт-каталог</option>
+                                            </optgroup>
+                                            <optgroup label="Техническая поддержка">
+                                                <option>Домен-хостинг</option>
+                                                <option>SEO-аудит</option>
+                                                <option>юзабилити аудит</option>
+                                            </optgroup>
+                                        </select>
+                                        <i class="select__arrow"></i>
+                                    </div>
+                                    <div class="single__block">
+                                        <input type="text" name="name" placeholder="Ваше имя" autocomplete="off">
+                                    </div>
+                                    <div class="single__block">
+                                        <input type="text" name="phone" placeholder="Номер телефона" autocomplete="off">
+                                    </div>
+                                    <div class="single__block">
+                                        <input type="email" name="email" placeholder="Email" autocomplete="off">
+                                    </div>
+                                    <div class="single__block">
+                                        <input type="submit" value="Отправить">
+                                    </div>
+                                    <div class="single__block agree__block">
+                                        <input type="checkbox" name="agree" id="i_agree" value="1" checked>
+                                        <label for="i_agree">Отправляя заяявку  вы соглашаетесь с <a href="#">правилами офферты</a></label>
+                                    </div>
+                                </form>
+                                <!-- /.order__service -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="footer__contacts">
+        <div class="container">
+            <div class="row">
+                <div class="footer__contacts-text">
+                    Звоните, пишите, договоримся!
+                </div>
+                <div class="footer__contacts-messengers">
+                    <div class="phone"><a href="#">8 (978) 754-74-99</a></div>
+                    <div class="email"><a href="#">info@krasber.ru</a></div>
+                    <div class="f__icons">
+                        <a href="#">
+                            <svg class="icon telegram">
+                                <use xlink:href="./img/symbols.svg#telegram"></use>
+                            </svg>
+                        </a>
+                        <a href="#">
+                            <svg class="icon viber">
+                                <use xlink:href="./img/symbols.svg#viber"></use>
+                            </svg>
+                        </a>
+                        <a href="#">
+                            <svg class="icon skype">
+                                <use xlink:href="./img/symbols.svg#skype"></use>
+                            </svg>
+                        </a>
+                        <a href="#">
+                            <svg class="icon insta">
+                                <use xlink:href="./img/symbols.svg#insta"></use>
+                            </svg>
+                        </a>
+                        <a href="#">
+                            <svg class="icon facebook">
+                                <use xlink:href="./img/symbols.svg#facebook"></use>
+                            </svg>
+                        </a>
+                        <a href="#">
+                            <svg class="icon vk">
+                                <use xlink:href="./img/symbols.svg#vk"></use>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer>
         <div class="container">
